Add new recipies and update index.html with links
Add recipies bear-don, breakfast-nachos
Add content to sinigang
Add pictures for each recipie

--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -1,1 +1,42 @@
-<h1>Sinigang</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+
+    <body>
+        <h1>Sinigang</h1>
+        <img src="./sinigang.png" alt="a bowl of sinigang" width="640" height="360">
+        <p>A traditional filipino tamarind-base soup</p>
+        <p>
+            People like adding filipino eggplant but eggplant is gross. 
+            Sometimes I'll add okra at the end with the spinach.
+        </p>
+        <p>Can be eaten on it's own or with rice.</p>
+
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 Packet sinigang mix</li>
+            <li>2lbs Pork shoulder</li>
+            <li>1 Large white onion</li>
+            <li>4 Roma tomatoes</li>
+            <li>1 Daikon radish</li>
+            <li>2lbs bag of spinach</li>
+        </ul>
+
+        <ol>
+            <li>Saute diced onions and tomatoes in instant pot</li>
+            <li>Add cubed meat</li>
+            <li>Add sliced daikon radish</li>
+            <li>fill with water to cover</li>
+            <li>add whole packet of sinigang mix</li>
+            <li>add fish sauce to taste</li>
+            <li>pressure cook on high for 35 min</li>
+            <li>natural release</li>
+            <li>add spinach and cover for 5 min</li>
+        </ol>
+    </body>
+</html>
