--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/sinigang.html">Sinigang</a></li>
+        <li><a href="./recipes/bear-don.html">Bear-Don</a></li>
+        <li><a href="./recipes/breakfast-nachos.html">Breakfast Nachos</a></li>
+    </ul>
 </body>
 </html>
