Add CSS styles to all .html docs

--- a/recipes/breakfast-nachos.html
+++ b/recipes/breakfast-nachos.html
@@ -4,35 +4,41 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
+
     <body>
         <h1>Breakfast Nachos</h1>
-        <img src="./breakfast-nachos.png" alt="an unrelated picture of nachos">
-        <p>It's like a breakfast burrito but nachos.</p>
-        <p>It's like nachos but with some breakfast things.</p>
-        <p>Put whatever you want on it</p>
+        <img class="center" src="./breakfast-nachos.png" alt="an unrelated picture of nachos">
 
+        <div class="container description">
+            <p>It's like a breakfast burrito but nachos.</p>
+            <p>It's like nachos but with some breakfast things.</p>
+            <p>Put whatever you want on it</p>
+        </div>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>Tortilla chips</li>
-            <li>cheese</li>
-            <li>2 eggs</li>
-            <li>bacon</li>
-            <li>sausage</li>
+        <div class="container">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>Tortilla chips</li>
+                <li>cheese</li>
+                <li>2 eggs</li>
+                <li>bacon</li>
+                <li>sausage</li>
 
-        </ul>
+            </ul>
 
-        <h3>Instructions</h3>
-        <ol>
-            <li>preheat oven to 350</li>
-            <li>line baking sheet with foil</li>
-            <li>arrange chips on foil</li>
-            <li>cook chopped bacon and ground sausage</li>
-            <li>scramble eggs in same pan</li>
-            <li>spread scramble evenly across chips</li>
-            <li>add cheese to your hearts desire</li>
-            <li>bake for like 10-15 min or until stuff is melted</li>
-        </ol>
+            <h3>Instructions</h3>
+            <ol>
+                <li>preheat oven to 350</li>
+                <li>line baking sheet with foil</li>
+                <li>arrange chips on foil</li>
+                <li>cook chopped bacon and ground sausage</li>
+                <li>scramble eggs in same pan</li>
+                <li>spread scramble evenly across chips</li>
+                <li>add cheese to your hearts desire</li>
+                <li>bake for like 10-15 min or until stuff is melted</li>
+            </ol>
+        </div>
     </body>
 </html>
