--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/sinigang.html">Sinigang</a></li>
-        <li><a href="./recipes/bear-don.html">Bear-Don</a></li>
-        <li><a href="./recipes/breakfast-nachos.html">Breakfast Nachos</a></li>
-    </ul>
+    <div class="container">
+        <ul id="recipeUL">
+            <li class="recipeLI"><a href="./recipes/sinigang.html">Sinigang</a></li>
+            
+            <li class="recipeLI"><a href="./recipes/bear-don.html">Bear-Don</a></li>
+            
+            <li class="recipeLI"><a href="./recipes/breakfast-nachos.html">Breakfast Nachos</a></li>
+        </ul>
+    </div>
 </body>
 </html>
