--- a/recipes/bear-don.html
+++ b/recipes/bear-don.html
@@ -4,37 +4,41 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
+
     <body>
         <h1>Bear-Don</h1>
-        <img src="./bear-don.jpg" alt="a bear waving">
-        <p>A protien bowl full of protien fit for bears.</p>
-        <p>
-            You can really add whatever meats you like. This is mine.
-        </p>
+        <img class="center" src="./bear-don.jpg" alt="a bear waving">
 
+        <div class="container description">
+            <p>A protien bowl full of protien fit for bears.</p>
+            <p>You can really add whatever meats you like. This is mine.</p>
+        </div>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>8oz cooked chicken breast, shredded or torn into bites</li>
-            <li>2 eggs</li>
-            <li>2 pieces of bacon cut into large bits</li>
-            <li>1 chicken sausage cut into little rounds</li>
-            <li>2oz melty cheese (like Chihuahua)</li>
-            <li>Seasonings</li>
-            <li>spinach</li>
-        </ul>
+        <div class="container">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>8oz cooked chicken breast, shredded or torn into bites</li>
+                <li>2 eggs</li>
+                <li>2 pieces of bacon cut into large bits</li>
+                <li>1 chicken sausage cut into little rounds</li>
+                <li>2oz melty cheese (like Chihuahua)</li>
+                <li>Seasonings</li>
+                <li>spinach</li>
+            </ul>
 
-        <h3>Instructions</h3>
-        <ol>
-            <li>In a skillet, cook bacon and sausage</li>
-            <li>use a paper towel to remove excessive grease</li>
-            <li>throw chicken and cheese into pan till heated and melted</li>
-            <li>add spinach and mix</li>
-            <li>season as desired</li>
-            <li>shovel everything into a bowel</li>
-            <li>fry eggs</li>
-            <li>put the eggs on top of the pile</li>
-        </ol>
+            <h3>Instructions</h3>
+            <ol>
+                <li>In a skillet, cook bacon and sausage</li>
+                <li>Use a paper towel to remove excessive grease</li>
+                <li>Throw chicken and cheese into pan till heated and melted</li>
+                <li>Add spinach and mix</li>
+                <li>Season as desired</li>
+                <li>Shovel everything into a bowel</li>
+                <li>Fry eggs</li>
+                <li>Put the eggs on top of the pile</li>
+            </ol>
+        </div>
     </body>
 </html>
