--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -4,39 +4,41 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <h1>Sinigang</h1>
-        <img src="./sinigang.png" alt="a bowl of sinigang" width="640" height="360">
-        <p>A traditional filipino tamarind-base soup</p>
-        <p>
-            People like adding filipino eggplant but eggplant is gross. 
-            Sometimes I'll add okra at the end with the spinach.
-        </p>
-        <p>Can be eaten on it's own or with rice.</p>
-
-
-        <h3>Ingredients</h3>
-        <ul>
-            <li>1 Packet sinigang mix</li>
-            <li>2lbs Pork shoulder</li>
-            <li>1 Large white onion</li>
-            <li>4 Roma tomatoes</li>
-            <li>1 Daikon radish</li>
-            <li>2lbs bag of spinach</li>
-        </ul>
-
-        <ol>
-            <li>Saute diced onions and tomatoes in instant pot</li>
-            <li>Add cubed meat</li>
-            <li>Add sliced daikon radish</li>
-            <li>fill with water to cover</li>
-            <li>add whole packet of sinigang mix</li>
-            <li>add fish sauce to taste</li>
-            <li>pressure cook on high for 35 min</li>
-            <li>natural release</li>
-            <li>add spinach and cover for 5 min</li>
-        </ol>
+        <img class="center" src="./sinigang.png" alt="a bowl of sinigang" >
+        
+        <div class="container description">
+            <p>A traditional filipino tamarind-base soup</p>
+            <p>People like adding filipino eggplant but eggplant is gross. </p>
+            <p>Sometimes I'll add okra at the end with the spinach.</p>
+            <p>Can be eaten on it's own or with rice.</p>
+        </div>
+        <div class="container">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 Packet sinigang mix</li>
+                <li>2lbs Pork shoulder</li>
+                <li>1 Large white onion</li>
+                <li>4 Roma tomatoes</li>
+                <li>1 Daikon radish</li>
+                <li>2lbs bag of spinach</li>
+            </ul>
+            <h3>Instructions</h3>
+            <ol>
+                <li>Saute diced onions and tomatoes in instant pot</li>
+                <li>Add cubed meat</li>
+                <li>Add sliced daikon radish</li>
+                <li>fill with water to cover</li>
+                <li>add whole packet of sinigang mix</li>
+                <li>add fish sauce to taste</li>
+                <li>pressure cook on high for 35 min</li>
+                <li>natural release</li>
+                <li>add spinach and cover for 5 min</li>
+            </ol>
+        </div>
     </body>
 </html>
