Update CSS styling and classes. Add descriptions.

--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <div class="container">
-        <ul id="recipeUL">
-            <li class="recipeLI"><a href="./recipes/sinigang.html">Sinigang</a></li>
-            
-            <li class="recipeLI"><a href="./recipes/bear-don.html">Bear-Don</a></li>
-            
-            <li class="recipeLI"><a href="./recipes/breakfast-nachos.html">Breakfast Nachos</a></li>
-        </ul>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <div class="navbar">
+            <a id="author" href="https://github.com/jermazing/odin-recipes">Made by Jeremy Quintos</a>
+        </div>
+
+        <h1>Odin Recipes</h1>
+
+        <div id="linkcontainer">
+            <a class="recipeLink" href="./recipes/sinigang.html">Sinigang</a>
+            <a class="recipeLink" href="./recipes/bear-don.html">Bear-Don</a>
+            <a class="recipeLink" href="./recipes/breakfast-nachos.html">Breakfast Nachos</a>
+        </div>
+
+    </body>
 </html>
