--- a/recipes/breakfast-nachos.html
+++ b/recipes/breakfast-nachos.html
@@ -8,27 +8,39 @@
     </head>
 
     <body>
+        <div class="navbar">
+            <a id="author" href="https://github.com/jermazing/odin-recipes">Made by Jeremy Quintos</a>
+        </div>
+
         <h1>Breakfast Nachos</h1>
+        
         <img class="center" src="./breakfast-nachos.png" alt="an unrelated picture of nachos">
 
+        <h3 class="summary">It's like a breakfast burrito but nachos</h3>
+        
         <div class="container description">
-            <p>It's like a breakfast burrito but nachos.</p>
-            <p>It's like nachos but with some breakfast things.</p>
-            <p>Put whatever you want on it</p>
+            <p>
+                It's like nachos but with some breakfast things.
+                Put whatever you want on it. Some avacado, salsa, sour cream, etc.
+                Because the oven is really only to melt the cheese and finish up the dish, cook
+                all the meat before putting it on the nachos. I also like to add a smaller layer of cheese directly
+                on the chips to make everything adhere better. If you have some cheese dip you can drizzle it on top
+                at the end. 
+            </p>
         </div>
 
         <div class="container">
-            <h3>Ingredients</h3>
+            <h3 class="sectionheader">Ingredients</h3>
             <ul>
                 <li>Tortilla chips</li>
                 <li>cheese</li>
                 <li>2 eggs</li>
                 <li>bacon</li>
                 <li>sausage</li>
-
+                <li>it's nachos add whatever</li>
             </ul>
 
-            <h3>Instructions</h3>
+            <h3 class="sectionheader">Instructions</h3>
             <ol>
                 <li>preheat oven to 350</li>
                 <li>line baking sheet with foil</li>
