--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -8,17 +8,24 @@
     </head>
 
     <body>
-        <h1>Sinigang</h1>
-        <img class="center" src="./sinigang.png" alt="a bowl of sinigang" >
-        
-        <div class="container description">
-            <p>A traditional filipino tamarind-base soup</p>
-            <p>People like adding filipino eggplant but eggplant is gross. </p>
-            <p>Sometimes I'll add okra at the end with the spinach.</p>
-            <p>Can be eaten on it's own or with rice.</p>
+        <div class="navbar">
+            <a id="author" href="https://github.com/jermazing/odin-recipes">Made by Jeremy Quintos</a>
         </div>
+        
+        <h1>Sinigang</h1>
+
+        <img class="center" src="./sinigang.png" alt="a bowl of sinigang" >
+
+        <h3 class="summary">A traditional filipino tamarind-base soup</h3>
+
+        <div class="container description">
+            <p>People like adding filipino eggplant but eggplant is gross.
+                Sometimes I'll add okra at the end with the spinach.
+                Can be eaten on it's own or with rice.</p>
+        </div>
+
         <div class="container">
-            <h3>Ingredients</h3>
+            <h3 class="sectionheader">Ingredients</h3>
             <ul>
                 <li>1 Packet sinigang mix</li>
                 <li>2lbs Pork shoulder</li>
@@ -27,7 +34,8 @@
                 <li>1 Daikon radish</li>
                 <li>2lbs bag of spinach</li>
             </ul>
-            <h3>Instructions</h3>
+
+            <h3 class="sectionheader">Instructions</h3>
             <ol>
                 <li>Saute diced onions and tomatoes in instant pot</li>
                 <li>Add cubed meat</li>
