--- a/recipes/bear-don.html
+++ b/recipes/bear-don.html
@@ -8,16 +8,24 @@
     </head>
 
     <body>
+        <div class="navbar">
+            <a id="author" href="https://github.com/jermazing/odin-recipes">Made by Jeremy Quintos</a>
+        </div>
         <h1>Bear-Don</h1>
         <img class="center" src="./bear-don.jpg" alt="a bear waving">
 
+        <h3 class="summary">A protien bowl full of protien fit for bears</h3>
+
         <div class="container description">
-            <p>A protien bowl full of protien fit for bears.</p>
-            <p>You can really add whatever meats you like. This is mine.</p>
+            <p>You can really add whatever meats you like. This is mine.
+                Greens are there for health and to eat more fiber and nutrients and stuff. 
+                Sometime's I'll scramble the eggs with the chicken if I dont feel like frying the egg.
+                Great easy way to hit your protien targets.
+            </p>
         </div>
 
         <div class="container">
-            <h3>Ingredients</h3>
+            <h3 class="sectionheader">Ingredients</h3>
             <ul>
                 <li>8oz cooked chicken breast, shredded or torn into bites</li>
                 <li>2 eggs</li>
@@ -28,7 +36,7 @@
                 <li>spinach</li>
             </ul>
 
-            <h3>Instructions</h3>
+            <h3 class="sectionheader">Instructions</h3>
             <ol>
                 <li>In a skillet, cook bacon and sausage</li>
                 <li>Use a paper towel to remove excessive grease</li>
